--- a/iap/dashboard.mdx
+++ b/iap/dashboard.mdx
@@ -18,7 +18,7 @@ Your dashboard provides two publishable keys:
 Pass your key to the SDK at launch:
 
 ```swift
-ZeroSettleIAP.shared.configure(.init(
+ZeroSettle.shared.configure(.init(
     publishableKey: "zs_pk_live_..."
 ))
 ```
@@ -41,7 +41,7 @@ Create and manage your product catalog from the dashboard. Each product has:
 Products are fetched by the SDK via `fetchProducts()` and returned as a `ProductCatalog`:
 
 ```swift
-let catalog = try await ZeroSettleIAP.shared.fetchProducts(userId: user.id)
+let catalog = try await ZeroSettle.shared.fetchProducts(userId: user.id)
 
 for product in catalog.products {
     print("\(product.displayName): \(product.webPrice.formatted)")
@@ -88,7 +88,7 @@ For example, you might use `webview` globally but disable web checkout in the EU
 // Just configure it on the dashboard.
 
 // In your app, check before showing web checkout UI:
-if ZeroSettleIAP.shared.isWebCheckoutEnabled {
+if ZeroSettle.shared.isWebCheckoutEnabled {
     // Show web checkout button
 } else {
     // Fall back to StoreKit
@@ -145,7 +145,7 @@ If your app currently uses StoreKit subscriptions and you want to migrate users 
 The SDK provides a built-in `ZSMigrateTipView` widget, or you can build your own UI:
 
 ```swift
-let catalog = try await ZeroSettleIAP.shared.fetchProducts(userId: user.id)
+let catalog = try await ZeroSettle.shared.fetchProducts(userId: user.id)
 
 if let migration = catalog.config?.migration {
     // Show migration prompt to eligible users
@@ -156,7 +156,7 @@ if let migration = catalog.config?.migration {
 After a successful migration purchase, track the conversion:
 
 ```swift
-try await ZeroSettleIAP.shared.trackMigrationConversion(userId: user.id)
+try await ZeroSettle.shared.trackMigrationConversion(userId: user.id)
 ```
 
 See [StoreKit Integration](/iap/storekit-integration) for the full migration guide.
