--- a/iap/revenuecat-integration.mdx
+++ b/iap/revenuecat-integration.mdx
@@ -10,14 +10,14 @@ There are two integration approaches:
 
 ## Option 1: SDK Integration (Recommended)
 
-Use the ZeroSettleIAP SDK alongside RevenueCat in your app. This gives you full control over the purchase flow.
+Use the ZeroSettleKit SDK alongside RevenueCat in your app. This gives you full control over the purchase flow.
 
 ### Configuration
 
 When using RevenueCat, disable ZeroSettle's StoreKit listener to avoid conflicts:
 
 ```swift
-import ZeroSettleIAP
+import ZeroSettleKit
 import RevenueCat
 
 @main
@@ -27,7 +27,7 @@ struct YourApp: App {
         Purchases.configure(withAPIKey: "your_revenuecat_key")
 
         // Configure ZeroSettle with StoreKit sync disabled
-        ZeroSettleIAP.shared.configure(.init(
+        ZeroSettle.shared.configure(.init(
             publishableKey: "your_zerosettle_key",
             syncStoreKitTransactions: false  // RevenueCat manages StoreKit
         ))
@@ -36,7 +36,7 @@ struct YourApp: App {
     var body: some Scene {
         WindowGroup {
             ContentView()
-                .zeroSettleIAPHandler()
+                .zeroSettleHandler()
         }
     }
 }
@@ -54,10 +54,10 @@ Pass RevenueCat's `appUserID` as the `userId` when making ZeroSettle purchases. 
 let rcUserId = Purchases.shared.appUserID
 
 // Fetch ZeroSettle product catalog
-let catalog = try await ZeroSettleIAP.shared.fetchProducts(userId: rcUserId)
+let catalog = try await ZeroSettle.shared.fetchProducts(userId: rcUserId)
 
 // Purchase via web checkout
-try await ZeroSettleIAP.shared.purchase(
+try await ZeroSettle.shared.purchase(
     productId: product.id,
     userId: rcUserId
 )
@@ -70,7 +70,7 @@ Show both ZeroSettle (web checkout) and RevenueCat (StoreKit) purchase options:
 ```swift
 struct PaywallView: View {
     @State private var showPaymentSheet = false
-    let zsProduct: ZSProduct      // From ZeroSettleIAP
+    let zsProduct: ZSProduct      // From ZeroSettleKit
     let rcPackage: Package        // From RevenueCat
 
     var body: some View {
