mintlify doesn't show video

--- a/iap/switch-and-save.mdx
+++ b/iap/switch-and-save.mdx
@@ -6,13 +6,13 @@ icon: 'gift'
 
 `ZSMigrateTipView` is a self-contained view that prompts eligible users to switch from Apple billing to direct billing at a discount. It manages its own visibility, checkout flow, and dismissal state. You just add it to your layout.
 
-<video
-  controls
-  playsInline
-  className="rounded-xl mx-auto"
-  style={{ maxHeight: '700px' }}
-  src="/videos/switchandsavedemo.mp4"
-></video>
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://www.youtube.com/embed/M1kBXsMTKL8"
+  title="Switch and Save Demo"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
 
 ## Usage
 
